# dbnexus

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README_en.md  deny.toml  docker-compose.yml  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml  release.yml
dbnexus/: Cargo.toml  build.rs  permissions.yaml
dbnexus-cli/: Cargo.toml
dbnexus-cli/src/: main.rs
dbnexus/migrations/: 1767025175_test_migration.sql  1767025393_test_migration.sql  1767071677_test_migration.sql  1767073586_test_migration.sql  1767074339_test_migration.sql  1767075309_test_migration.sql  1767075344_test_migration.sql  1767075370_test_migration.sql  1767075455_test_migration.sql  1767075462_test_migration.sql  1767075470_test_migration.sql  1767076005_test_migration.sql  1767076054_test_migration.sql  1767076068_test_migration.sql  1767076080_test_migration.sql  1767076517_test_migration.sql  1767076533_test_migration.sql  1767076547_test_migration.sql  1767077047_test_migration.sql  1767077071_test_migration.sql  1767077083_test_migration.sql  1767077418_test_migration.sql  1767077507_test_migration.sql  1767077526_test_migration.sql  1767077540_test_migration.sql  1767078366_test_migration.sql  1767078456_test_migration.sql  1767078473_test_migration.sql  1767078486_test_migration.sql  1767078796_test_migration.sql  1767078953_test_migration.sql  1767079045_test_migration.sql  1767079059_test_migration.sql  1767079069_test_migration.sql  1767079869_test_migration.sql  1767079902_test_migration.sql  1767079924_test_migration.sql  1767080646_test_migration.sql  1767080768_test_migration.sql  1767080792_test_migration.sql  (+14 more)
dbnexus/src/: audit.rs  cache.rs  config.rs  entity.rs  generated_roles.rs  global_index.rs  lib.rs  migration.rs  permission.rs  pool.rs
dbnexus/src/audit/: mod.rs
dbnexus/src/cache/: mod.rs
dbnexus/src/config/: database.rs  mod.rs
dbnexus/src/entity/: mod.rs
dbnexus/src/global_index/: mod.rs
dbnexus/src/metrics/: mod.rs
dbnexus/src/migration/: mod.rs
dbnexus/src/permission/: mod.rs
dbnexus/src/permission_engine/: mod.rs
dbnexus/src/pool/: mod.rs
dbnexus/src/sharding/: mod.rs
dbnexus/src/tracing/: mod.rs
dbnexus/tests/: audit_integration.rs  auto_migrate_integration.rs  cache_integration.rs  cli_integration.rs  concurrency_integration.rs  migration_integration.rs  multi_db_integration.rs  permission_integration.rs  pool_integration.rs  session_transaction.rs  sharding_integration.rs
dbnexus/tests/common/: mod.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  FILE_STRUCTURE_ANALYSIS.md  TESTING.md  USER_GUIDE.md  config.yaml  permissions.yaml  prd.md  task.md  tdd.md  test.md  uat.md
examples/: permissions.rs  quickstart.rs  transactions.rs
migrate-cli/: Cargo.toml
migrate-cli/src/: main.rs
scripts/: generate-sql.sh  init-mysql.sql  init-postgres.sql  init-sqlite.sql  test-databases.sh
scripts/template/: init.sql.template  mysql.vars  postgres.vars  sqlite.vars
