[package]
name = "dbnexus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "DBNexus CLI tool for database migration and management"

[[bin]]
name = "dbnexus-cli"
path = "src/main.rs"

# Database drivers (互斥 - 必须且只能选一个)
# 使用时: cargo run --features sqlite|postgres|mysql
[features]
default = []
sqlite = ["dbnexus/sqlite"]
postgres = ["dbnexus/postgres"]
mysql = ["dbnexus/mysql"]

[dependencies]
dbnexus = { path = "../dbnexus", default-features = false, features = ["migration", "runtime-tokio-rustls"] }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "parsing"] }
chrono = { version = "0.4", features = ["std"] }
url = "2.4"
