[package]
name = "dbnexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "An enterprise-grade database abstraction layer for Rust with built-in permission control and connection pooling"

[features]
default = ["runtime-tokio-rustls"]

# Async runtime (互斥)
runtime-tokio-rustls = [
    "sea-orm/runtime-tokio-rustls",
    "tokio/rt-multi-thread",
]
runtime-tokio-native-tls = [
    "sea-orm/runtime-tokio-native-tls",
    "tokio/rt-multi-thread",
]
runtime-async-std = [
    "sea-orm/runtime-async-std",
]

# Database drivers (互斥 - 必须且只能选一个)
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]

# Optional features
metrics = ["dep:prometheus"]
migration = []
tracing = ["tracing-subscriber/env-filter"]

# 启用所有可选特性（不包括数据库特性，因为数据库特性互斥）
all-optional = ["metrics", "migration", "tracing"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
prometheus = { workspace = true, optional = true }
toml = "0.8"
parking_lot = "0.12"
lru = { workspace = true }
home = "0.5"

# External dependencies
regex = "1.0"
rand = "0.8"

# Internal dependencies
dbnexus-macros = { path = "../dbnexus-macros" }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
futures = "0.3"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
