[package]
name = "dbnexus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "An enterprise-grade database abstraction layer for Rust with built-in permission control and connection pooling"

[features]
default = ["runtime-tokio-rustls"]

# Async runtime (互斥)
runtime-tokio-rustls = [
    "sea-orm/runtime-tokio-rustls",
    "tokio/rt-multi-thread",
]
runtime-tokio-native-tls = [
    "sea-orm/runtime-tokio-native-tls",
    "tokio/rt-multi-thread",
]
runtime-async-std = [
    "sea-orm/runtime-async-std",
]

# Database drivers (互斥 - 必须且只能选一个)
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]

# Optional features
metrics = ["dep:prometheus"]
migration = []
sharding = ["dep:twox-hash", "dep:chrono"]
global-index = ["dep:sha2", "dep:async-trait", "dep:chrono"]
cache = ["dep:async-trait", "dep:uuid"]
audit = ["dep:chrono", "dep:uuid", "dep:async-trait"]
permission-engine = ["dep:async-trait"]
tracing = [
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-jaeger",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:chrono",
    "dep:http",
    "dep:tower",
    "dep:once_cell",
]

# 启用所有可选特性（不包括数据库特性，因为数据库特性互斥）
all-optional = ["metrics", "migration", "tracing", "sharding", "global-index", "cache", "audit", "permission-engine"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
prometheus = { workspace = true, optional = true }
toml = "0.8"
parking_lot = "0.12"
lru = { workspace = true }
home = "0.5"
chrono = { version = "0.4", optional = true, features = ["serde"] }
http = { version = "1.0", optional = true }
tower = { version = "0.5", optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
opentelemetry = { version = "0.24", optional = true }
opentelemetry-otlp = { version = "0.17", optional = true }
opentelemetry-jaeger = { version = "0.18", optional = true }
opentelemetry_sdk = { version = "0.24", optional = true }
once_cell = { version = "1.20", optional = true }
twox-hash = { version = "1.6", optional = true }
sha2 = { version = "0.10", optional = true }
async-trait = { version = "0.1", optional = true }
uuid = { version = "1.0", optional = true, features = ["v4"] }

# External dependencies
regex = "1.0"
rand = "0.8"

# Internal dependencies
dbnexus-macros = { path = "../dbnexus-macros" }

tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
futures = "0.3"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
