[package]
name = "dbnexus-migrate"
version = "0.1.0"
edition = "2021"
description = "DBNexus 数据库迁移命令行工具"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dbnexus-migrate"
path = "src/main.rs"

# Database drivers (互斥 - 必须且只能选一个)
# 使用时: cargo run --features sqlite|postgres|mysql
[features]
default = []
sqlite = ["dbnexus/sqlite"]
postgres = ["dbnexus/postgres"]
mysql = ["dbnexus/mysql"]

[dependencies]
dbnexus = { path = "../dbnexus", default-features = false, features = ["migration", "runtime-tokio-rustls"] }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "parsing"] }
chrono = { version = "0.4", features = ["std"] }
url = "2.4"
